[package]
name = "typed-html-macros"
version = "0.1.1"
authors = ["Bodil Stokke <bodil@bodil.org>"]
build = "build.rs"
license = "MPL-2.0+"
description = "Type checked JSX for Rust (proc_macro crate)"
repository = "https://github.com/bodil/typed-html"
documentation = "http://docs.rs/typed-html/"
readme = "../README.md"
categories = ["template-engine", "wasm", "web-programming"]
keywords = ["jsx", "html", "wasm"]

[lib]
proc-macro = true

[dependencies]
lalrpop-util = "0.16.1"
ansi_term = "0.11.0"
proc-macro2 = { version = "0.4.24", features = ["nightly"] }
proc-macro-hack = "0.5.2"
quote = "0.6.10"

[build-dependencies]
lalrpop = "0.16.1"
version_check = "0.1.5"
