[package]
name = "axohtml-macros"
version = "0.1.0"
edition = "2018"
authors = ["Axo Developer Co <hello@axo.dev>", "Bodil Stokke <bodil@bodil.org>"]
build = "build.rs"
license = "MPL-2.0+"
description = "Type checked JSX for Rust (proc_macro crate)"
repository = "https://github.com/bodil/typed-html"
documentation = "http://docs.rs/typed-html/"
readme = "../README.md"
categories = ["template-engine", "wasm", "web-programming"]
keywords = ["jsx", "html", "wasm"]

[lib]
proc-macro = true

[dependencies]
lalrpop-util = "0.19"
ansi_term = "0.12.0"
proc-macro2 = { version = "1.0.4", features = ["nightly"] }
quote = "1.0.2"

[build-dependencies]
lalrpop = "0.19"
version_check = "0.9.1"

[features]
dodrio = []
