[package]
name = "axohtml-tests"
version = "0.0.0"
edition = "2018"
authors = ["Bodil Stokke <bodil@bodil.org>"]
publish = false

[[bin]]
name = "typed-html-tests"
path = "main.rs"

[dev-dependencies]
compiletest_rs = { version = "0.7", features = ["stable"] }
axohtml = { path = "../typed-html" }
axohtml-macros = { path = "../macros" }
version_check = "0.9.1"
