[package]
name = "typed-html"
version = "0.2.0"
edition = "2018"
authors = ["Bodil Stokke <bodil@bodil.org>"]
license = "MPL-2.0+"
description = "Type checked JSX for Rust"
repository = "https://github.com/bodil/typed-html"
documentation = "http://docs.rs/typed-html/"
readme = "../README.md"
categories = ["template-engine", "wasm", "web-programming"]
keywords = ["jsx", "html", "wasm"]

[badges]
travis-ci = { repository = "bodil/typed-html" }
maintenance = { status = "actively-developed" }

[dependencies]
typed-html-macros = { path = "../macros" }
strum = "0.15.0"
strum_macros = "0.15.0"
mime = "0.3.13"
language-tags = "0.2.2"
htmlescape = "0.3.1"
proc-macro-hack = "0.5.4"
proc-macro-nested = "0.1.3"
stdweb = { version = "0.4.14", optional = true }
yew = { version = "0.6.0", optional = true }
dodrio = { version = "0.1.0", optional = true }
web-sys = { version = "0.3.16", optional = true, features = ["Event", "Element"] }

[features]
dodrio_macro = ["web-sys", "dodrio", "typed-html-macros/dodrio"]
yew_html = ["yew", "stdweb"]
