[package]
name = "axohtml"
version = "0.1.0"
edition = "2021"
authors = ["Axo Developer Co <hello@axo.dev>", "Bodil Stokke <bodil@bodil.org>"]
license = "MPL-2.0+"
description = "Type checked JSX for Rust"
repository = "https://github.com/axodotdev/axohtml"
documentation = "http://docs.rs/axohtml/"
readme = "../README.md"
categories = ["template-engine", "web-programming"]
keywords = ["jsx", "html"]

[dependencies]
axohtml-macros = { path = "../macros" }
strum = "0.23"
strum_macros = "0.23"
mime = "0.3.13"
language-tags = "0.3"
htmlescape = "0.3.1"
proc-macro-nested = "0.1.3"
