[package]
name = "typed-html-tests"
version = "0.0.0"
edition = "2021"
authors = ["Bodil Stokke <bodil@bodil.org>"]
publish = false

[[bin]]
name = "typed-html-tests"
path = "main.rs"

[dev-dependencies]
compiletest_rs = { version = "0.7", features = ["stable"] }
typed-html = { path = "../typed-html" }
typed-html-macros = { path = "../macros" }
version_check = "0.9.1"
